--- a/public/not_found/index.html
+++ b/public/not_found/index.html
@@ -14,8 +14,22 @@
       </header>
     </a>
     <main>
-        <h1>{{ title }}</h1>
-        {{ content }}
+        <h1></h1>
+        
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Not Found</title>
+    <link href="/style.css" rel="stylesheet" type="text/css" media="all">
+  </head>
+  <body>
+    <h1>404 error: not found</h1>
+    <p>my bad; <a href="/">go back home</a></p>
+  </body>
+</html>
+
     </main>
     <footer>
         <a href="https://neocities.org">
