--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
----
-  layout: layout.html
-  title: hello welcome to my website!
----
+<body>
+  <a href="/home">
+    <img src="assets/tbh_irl.jpg" />
+  </a>
+</body>
 
-<p>i'm very and i'm just a boring ol' guy :)</p>
-<p>this website will probably be less boring in the future</p>
-<img src="assets/tbhspin.webp" alt="spinning tbh" width="44px">
-<p>follow me on <a href="https://bsky.app/profile/tbh.vc">bluesky</a> to see me ramble like a crazy person</p>
-
-{% for post in collections.post %}
-<a href="{{ post.url }}" class="bubble">
-    <h2>
-      {{ post.data.title }}
-    </h2>
-    {{ post.content }}
-</a>
-
-
-{% endfor %}
+<style>
+  body {
+    background-color: black;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  img {
+    transition: 10s all;
+  }
+  img:hover {
+    filter: drop-shadow(0px 0px 100px black) invert(100%) brightness(10);
+  }
+</style>
