--- a/not_found.html
+++ b/not_found.html
@@ -12,6 +12,6 @@
   </head>
   <body>
     <h1>404 error: not found</h1>
-    <p>my bad; <a href="/">go back home</a></p>
+    <p>my bad; <a href="/home">go back home</a></p>
   </body>
 </html>
