--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>...</title>
+  <link href="/assets/style.css" rel="stylesheet" type="text/css" media="all">
+  <link rel="icon" type="image/svg+xml" href="/assets/tbh_irl.jpg">
+</head>
+
 <body>
   <a href="/home">
     <img src="assets/tbh_irl.jpg" />
