Added first real post and site name

--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 ---
-title: about me
+title: about us
 layout: layout.html
 ---
 
-<p>i forgot who i was...</p>
+<p>we are the tbh virtual club - that's what tbh.vc stands for! i think...</p>
+<p>the only member so far is me, very ;-;</p>
