--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <a href="/home">
-    <img src="assets/tbh_irl.jpg" />
+    <img src="https://r2.tbh.vc/tbh_irl.jpg" />
   </a>
 </body>
 
