--- a/about.html
+++ b/about.html
@@ -4,4 +4,5 @@ layout: layout.html
 ---
 
 <p>we are the tbh virtual club - that's what tbh.vc stands for! i think...</p>
+<p>the vc means retroactively means <a href="/posts/first">virtual club</a> and definitely not vatican city just be clear</p>
 <p>the only member so far is me, very ;-;</p>
