Typo fixes and stuff

--- a/home.html
+++ b/home.html
@@ -1,7 +1,6 @@
 ---
   title: welcome to tbh virtual club
   layout: layout.html
-  date: git Last Modified
 ---
 
 <div class="text-float">
@@ -12,7 +11,7 @@
 
 <p>follow me on <a href="https://bsky.app/profile/tbh.vc">bluesky</a> for no reason</p>
 <p>this week's featured tbh:</p>
-<img src="https://r2.tbh.vc/fucked_up_tbh.jpg" alt="fucked up tbh">
+<img src="https://r2.tbh.vc/FsVUEYUX0Bc9t-v.jpg" id="weekly" alt="tbh is being mutilated">
 
 <h1>my blog</h1>
 <div class="cards">
@@ -27,3 +26,11 @@
   {% endfor %}
 </div>
 
+<style>
+  #weekly {
+    object-fit: cover;
+    max-height: 500px;
+    max-width: 500px;
+    overflow: hidden;
+  }
+</style>
