--- a/thanks.html
+++ b/thanks.html
@@ -1,8 +1,7 @@
 ---
     layout: layout.html
+    title: under construction!!
 ---
-
-<h2>under construction!!</h2>
 
 <img src="https://r2.tbh.vc/construction.jpg">
 
