--- a/not_found.html
+++ b/not_found.html
@@ -1,5 +1,6 @@
 ---
   layout: layout.html
+  permalink: not_found.html
 ---
 
 <!DOCTYPE html>
@@ -13,5 +14,6 @@
   <body>
     <h1>404 error: not found</h1>
     <p>my bad; <a href="/home">go back home</a></p>
+    <img src="https://r2.tbh.vc/FsVUKtAX0AEaxop.jpg" alt="scram!">
   </body>
 </html>
