--- a/blog.html
+++ b/blog.html
@@ -26,7 +26,7 @@
   }
   .bubble {
     color: black;
-    border: rgb(60, 183, 224) dotted 2px;
+    border: rgba(60, 183, 224, 0.7) dashed 4px;
     font-family: 'Times New Roman', Times, serif;
     transition: all 0.2s;
     white-space: nowrap;
