Fixed shake - shake your booty

--- a/home.html
+++ b/home.html
@@ -44,7 +44,7 @@
 
 <div class="text-center">
   <button id="btn" onclick="tbhDies()">
-    <img id="freak" class="tbh" class="shake" src="https://r2.tbh.vc/fucked_up_tbh.jpg" alt="a genetic freak">
+    <img id="freak" class="tbh shake" src="https://r2.tbh.vc/fucked_up_tbh.jpg" alt="a genetic freak">
   </button>
 </div>
 
