Update music style

--- a/music.html
+++ b/music.html
@@ -5,53 +5,65 @@
 
 <p>i make silly little music - check it all out below! :D</p>
 
-<h2>tbh rpg adventures ost</h2>
-<p>this is a collection of songs i've created randomly throughout the years. the idea was to have the music featured in a game or something, but i feel all of them may be too... messy? unfocused? they're more ideas rather than actual music. in fact, some of the themes comes from my dreams. anyway, here they are: </p>
+<div id="tbhrpg">
+    <h2>tbh rpg adventures ost</h2>
+    <p>this is a collection of songs i've created randomly throughout the years. the idea was to have the music featured in a game or something, but i feel all of them may be too... messy? unfocused? they're more ideas rather than actual music. in fact, some of the themes comes from my dreams. anyway, here they are: </p>
 
-<figure>
-    <h3>Ω.mp3</h3>
-    <figcaption>this is the first song i tried creating back in september of 2020. it kinda sounds like cave story to me, but not really. the main melody has stayed the same throughout the years, but like with every song in this album, i've edited it throughout the years.</figcaption>
-    <audio controls src="https://r2.tbh.vc/music/%CE%A9.mp3" type="audio/mp3">
-    </audio>
-</figure>
-<figure>
-    <h3>μ.mp3</h3>
-    <figcaption>tutorial music? i don't know, but this was originally a joke song with the among us theme (around the part where the drums stop playing).</figcaption>
-    <audio controls src="https://r2.tbh.vc/music/%CE%BC.mp3" type="audio/mp3"></audio>
-</figure>
-<figure>
-    <h3>θ.mp3</h3>
-    <figcaption>first boss music vibes. it is a little messy until the build up, but again, i'm just conveying ideas rather than actually making music.</figcaption>
-    <audio controls src="https://r2.tbh.vc/music/%CE%B8.mp3" type="audio/mp3"></audio>
-</figure>
-<figure>
-    <h3>α.mp3</h3>
-    <figcaption>i imagine this as the first major city that you visit. i could probably do without the beginning in that case.</figcaption>
-    <audio controls src="https://r2.tbh.vc/music/%CE%B1.mp3" type="audio/mp3"></audio>
-</figure>
-<figure>
-    <h3>ψ.mp3</h3>
-    <figcaption>a more eviler boss! in fact, you could recruit the first boss into your party and some sort of interaction would happen when you reach this guy. this guy is definitely super evil and spooky (and more conversational).</figcaption>
-    <audio controls src="https://r2.tbh.vc/music/%CF%88.mp3" type="audio/mp3"></audio>
-</figure>
-<figure>
-    <h3>σ.mp3</h3>
-    <figcaption>a simple(?) theme for a simple person. this was probably going to be the theme for the upgrade npc, like a blacksmith or something. you can challenge them in a puzzle, though, they may know more than you thought originally...</figcaption>
-    <audio controls src="https://r2.tbh.vc/music/%CF%83.mp3" type="audio/mp3"></audio>
-</figure>
-<figure>
-    <h3>χ̷̗̱̗͉̣̗͗͑͂̄̀̎̀̽.mp3</h3>
-    <figcaption>secret area? cursed? i found this hidden within my musics folder, and i have little to no recollection of creating this song. actually kinda scary and may be creepypasta material.</figcaption>
-    <audio controls src="https://r2.tbh.vc/music/%CF%87%CC%B7%CD%97%CD%91%CD%82%CC%84%CC%80%CC%8E%CD%80%CC%BD%CC%97%CC%B1%CC%97%CD%89%CC%A3%CC%97.mp3" type="audio/mp3"></audio>    
-</figure>
-<figure>
-    <h3>Ν.mp3</h3>
-    <figcaption>beauetyfull... piano and strings. credits music maybe?</figcaption>
-    <audio controls src="https://r2.tbh.vc/music/%CE%9D.mp3" type="audio/mp3"></audio>
-</figure>
+    <figure>
+        <h3>Ω.mp3</h3>
+        <figcaption>this is the first song i tried creating back in september of 2020. it kinda sounds like cave story to me, but not really. the main melody has stayed the same throughout the years, but like with every song in this album, i've edited it throughout the years.</figcaption>
+        <audio controls src="https://r2.tbh.vc/music/%CE%A9.mp3" type="audio/mp3">
+        </audio>
+    </figure>
+    <figure>
+        <h3>μ.mp3</h3>
+        <figcaption>tutorial music? i don't know, but this was originally a joke song with the among us theme (around the part where the drums stop playing).</figcaption>
+        <audio controls src="https://r2.tbh.vc/music/%CE%BC.mp3" type="audio/mp3"></audio>
+    </figure>
+    <figure>
+        <h3>θ.mp3</h3>
+        <figcaption>first boss music vibes. it is a little messy until the build up, but again, i'm just conveying ideas rather than actually making music.</figcaption>
+        <audio controls src="https://r2.tbh.vc/music/%CE%B8.mp3" type="audio/mp3"></audio>
+    </figure>
+    <figure>
+        <h3>α.mp3</h3>
+        <figcaption>i imagine this as the first major city that you visit. i could probably do without the beginning in that case.</figcaption>
+        <audio controls src="https://r2.tbh.vc/music/%CE%B1.mp3" type="audio/mp3"></audio>
+    </figure>
+    <figure>
+        <h3>ψ.mp3</h3>
+        <figcaption>a more eviler boss! in fact, you could recruit the first boss into your party and some sort of interaction would happen when you reach this guy. this guy is definitely super evil and spooky (and more conversational).</figcaption>
+        <audio controls src="https://r2.tbh.vc/music/%CF%88.mp3" type="audio/mp3"></audio>
+    </figure>
+    <figure>
+        <h3>σ.mp3</h3>
+        <figcaption>a simple(?) theme for a simple person. this was probably going to be the theme for the upgrade npc, like a blacksmith or something. you can challenge them in a puzzle, though, they may know more than you thought originally...</figcaption>
+        <audio controls src="https://r2.tbh.vc/music/%CF%83.mp3" type="audio/mp3"></audio>
+    </figure>
+    <figure>
+        <h3>χ̷̗̱̗͉̣̗͗͑͂̄̀̎̀̽.mp3</h3>
+        <figcaption>secret area? cursed? i found this hidden within my musics folder, and i have little to no recollection of creating this song. actually kinda scary and may be creepypasta material.</figcaption>
+        <audio controls src="https://r2.tbh.vc/music/%CF%87%CC%B7%CD%97%CD%91%CD%82%CC%84%CC%80%CC%8E%CD%80%CC%BD%CC%97%CC%B1%CC%97%CD%89%CC%A3%CC%97.mp3" type="audio/mp3"></audio>    
+    </figure>
+    <figure>
+        <h3>Ν.mp3</h3>
+        <figcaption>beauetyfull... piano and strings. credits music maybe?</figcaption>
+        <audio controls src="https://r2.tbh.vc/music/%CE%9D.mp3" type="audio/mp3"></audio>
+    </figure>
+</div>
 
 <style>
+    @import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap');
     audio {
+        margin-top: 1em;
         width: 100%;
     }
+    #tbhrpg {
+        background-color: black;
+        border: double white 8px;
+        color: white;
+        padding: 3em;
+        font: 1.3rem "Pixelify Sans", monospace;
+    }
+    #tbhrpg 
 </style>
