--- a/music.html
+++ b/music.html
@@ -10,10 +10,20 @@
     <p>this is a collection of songs i've created randomly throughout the years. the idea was to have the music featured in a game or something, but i feel all of them may be too... messy? unfocused? they're more ideas rather than actual music. in fact, some of the themes comes from my dreams. anyway, here they are: </p>
 
     <figure>
+        <h3>γ.mp3</h3>
+        <figcaption>this sounds like title screen music to me... nothing of note tbh.</figcaption>
+        <audio controls src="https://r2.tbh.vc/music/%CE%B3.mp3" type="audio/mp3"></audio>
+    </figure>
+    <figure>
         <h3>Ω.mp3</h3>
         <figcaption>this is the first song i tried creating back in september of 2020. it kinda sounds like cave story to me, but not really. the main melody has stayed the same throughout the years, but like with every song in this album, i've edited it throughout the years.</figcaption>
         <audio controls src="https://r2.tbh.vc/music/%CE%A9.mp3" type="audio/mp3">
         </audio>
+    </figure>
+    <figure>
+        <h3>β.mp3</h3>
+        <figcaption>slow music (even though it's technically 120bpm...) intended for something like a starting village or something.</figcaption>
+        <audio controls src="https://r2.tbh.vc/music/%CE%B2.mp3" type="audio/mp3"></audio>
     </figure>
     <figure>
         <h3>μ.mp3</h3>
@@ -31,14 +41,14 @@
         <audio controls src="https://r2.tbh.vc/music/%CE%B1.mp3" type="audio/mp3"></audio>
     </figure>
     <figure>
-        <h3>ψ.mp3</h3>
-        <figcaption>a more eviler boss! in fact, you could recruit the first boss into your party and some sort of interaction would happen when you reach this guy. this guy is definitely super evil and spooky (and more conversational).</figcaption>
-        <audio controls src="https://r2.tbh.vc/music/%CF%88.mp3" type="audio/mp3"></audio>
-    </figure>
-    <figure>
         <h3>σ.mp3</h3>
         <figcaption>a simple(?) theme for a simple person. this was probably going to be the theme for the upgrade npc, like a blacksmith or something. you can challenge them in a puzzle, though, they may know more than you thought originally...</figcaption>
         <audio controls src="https://r2.tbh.vc/music/%CF%83.mp3" type="audio/mp3"></audio>
+    </figure>
+    <figure>
+        <h3>ψ.mp3</h3>
+        <figcaption>a more eviler boss! in fact, you could recruit the first boss into your party and some sort of interaction would happen when you reach this guy. this guy is definitely super evil and spooky (and more conversational).</figcaption>
+        <audio controls src="https://r2.tbh.vc/music/%CF%88.mp3" type="audio/mp3"></audio>
     </figure>
     <figure>
         <h3>χ̷̗̱̗͉̣̗͗͑͂̄̀̎̀̽.mp3</h3>
