--- a/music.html
+++ b/music.html
@@ -41,9 +41,14 @@
         <audio controls src="https://r2.tbh.vc/music/%CE%B1.mp3" type="audio/mp3"></audio>
     </figure>
     <figure>
-        <h3>σ.mp3</h3>
-        <figcaption>a simple(?) theme for a simple person. this was probably going to be the theme for the upgrade npc, like a blacksmith or something. you can challenge them in a puzzle, though, they may know more than you thought originally...</figcaption>
+        <h3>ε.mp3</h3>
+        <figcaption>i actually recall hearing this song in my dreams and then frantically notating it right after my nap. kinda sounds desert-y.</figcaption>
         <audio controls src="https://r2.tbh.vc/music/%CF%83.mp3" type="audio/mp3"></audio>
+    </figure>
+    <figure>
+        <h3></h3>
+        <figcaption>a simple(?) theme for a simple person. this was probably going to be the theme for the upgrade npc, like a blacksmith or something. you can challenge them in a puzzle, though, they may know more than you thought originally...</figcaption>
+        <audio controls src="https://r2.tbh.vc/music/%CE%B5.mp3" type="audio/mp3"></audio>
     </figure>
     <figure>
         <h3>ψ.mp3</h3>
